Add extra metadata in command run analytics for the new GitHub app
